<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.unb.cic</groupId>
	<artifactId>mop-test-suite</artifactId>
	<version>1.2.8</version>

	<organization>
		<name>Universidade de Brasília</name>
		<url>http://www.cic.unb.br/</url>
	</organization>
	<inceptionYear>2022</inceptionYear>

	<properties>
		<java.version>8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>

		<skipMopAgent>false</skipMopAgent>
		<skipTests>false</skipTests>

		<aspectj.version>1.8.1</aspectj.version>

		<maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
		<maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
		<spotbugs-maven-plugin.version>4.7.0.0</spotbugs-maven-plugin.version>
		<fb-contrib.version>7.4.3.sb</fb-contrib.version>
		<findsecbugs-plugin.version>1.12.0</findsecbugs-plugin.version>
		<dependency-check-maven.version>7.1.1</dependency-check-maven.version>
		<maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
		<com.puppycrawl.tools.checkstyle.version>10.3</com.puppycrawl.tools.checkstyle.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.runtimeverification.rvmonitor</groupId>
			<artifactId>rv-monitor</artifactId>
			<!-- Allow any released (non-snapshot) RV-Monitor release >= 1.3 -->
			<version>statistics-1.4</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>${aspectj.version}</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjtools</artifactId>
			<version>${aspectj.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>19.0</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.surefire</groupId>
			<artifactId>surefire-junit4</artifactId>
			<version>${maven-surefire-plugin.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>${project.build.sourceEncoding}</encoding>
						<debug>true</debug>
						<parameters>false</parameters>
						<verbose>false</verbose>
						<optimize>true</optimize>
						<showWarnings>false</showWarnings>
						<showDeprecation>false</showDeprecation>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>${spotbugs-maven-plugin.version}</version>
					<configuration>
						<effort>Max</effort>
						<threshold>Low</threshold>
						<xmlOutput>true</xmlOutput>
						<failOnError>false</failOnError>
						<debug>false</debug>
						<includeTests>false</includeTests>
						<spotbugsXmlOutput>true</spotbugsXmlOutput>
						<onlyAnalyze>br.unb.cic.*</onlyAnalyze>
						<plugins>
							<plugin>
								<groupId>com.mebigfatguy.fb-contrib</groupId>
								<artifactId>fb-contrib</artifactId>
								<version>${fb-contrib.version}</version>
							</plugin>
							<plugin>
								<groupId>com.h3xstream.findsecbugs</groupId>
								<artifactId>findsecbugs-plugin</artifactId>
								<version>${findsecbugs-plugin.version}</version>
							</plugin>
						</plugins>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.owasp</groupId>
					<artifactId>dependency-check-maven</artifactId>
					<version>${dependency-check-maven.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>br.unb.cic</groupId>
				<artifactId>mop-maven-plugin</artifactId>
				<version>1.0.1</version>
				<executions>
					<execution>
						<goals>
							<goal>mop-gen</goal>
							<goal>agent-gen</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<pathToMopFiles>src/main/mop</pathToMopFiles>
					<pathToJavaMop>${basedir}/../javamop/bin</pathToJavaMop>
					<pathToMonitor>${basedir}/../rv-monitor/bin</pathToMonitor>
					
					<generateMopStatistics>true</generateMopStatistics>
		
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
					<argLine>-javaagent:${basedir}/JavaMOPAgent.jar</argLine>
					<runOrder>alphabetical</runOrder>
					<testFailureIgnore>false</testFailureIgnore>
					<trimStackTrace>true</trimStackTrace>
<!-- 					<includes> -->
<!-- 						<include>br.unb.cic.mop.bench01.MessageDigestTest</include> -->
						<!-- <include>br/unb/cic/mop/drivers/Bench01.java</include> -->
						<!-- <include>br/unb/cic/mop/drivers/Bench02.java</include> -->
						<!-- <include>br/unb/cic/mop/drivers/Bench03.java</include> -->
<!-- 					</includes> -->
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>check</id>
			<properties>
				<skipMopAgent>true</skipMopAgent>
				<skipTests>true</skipTests>
			</properties>
			<build>
				<defaultGoal>verify</defaultGoal>
				<plugins>
					<plugin>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs-maven-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
